--- a/anti-termite-reticulation-system.html
+++ b/anti-termite-reticulation-system.html
@@ -95,8 +95,6 @@
                 <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                 <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
                 <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
-                <li><a href="bird-control.html">Bird Control Service</a></li>
-                <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html""class=active">Anti Termite Reticulation Service</a></li>
               </ul>
             </li>
@@ -163,8 +161,6 @@
                           <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                           <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
                           <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
-                          <li><a href="bird-control.html">Bird Control Service</a></li>
-                          <li><a href="disinfection-services.html">Disinfection Service</a></li>
                           <li><a href="anti-termite-reticulation-system.html""class=active">Anti Termite Reticulation Service</a></li>
                         </ul>
                       </li>
@@ -240,11 +236,13 @@
           </div>
 
           <div class="page-content">
-            <h2 class="h3 sec-title page-title">Long-Term, Low-Disruption Termite Protection</h2>
+            <h2 class="h3 sec-title page-title">Effective Termite Protection with Minimal Disruption</h2>
             <p>
-              The <strong>Anti Termite Reticulation System (RTR/DRS)</strong> is a maintainable, rechargeable solution that creates a
-              <em>uniform chemical barrier</em> around your foundation. Future top-ups are done via <strong>recharge ports</strong>—so no repeated
-              drilling or messy treatments. Titan’s certified technicians handle design, installation, refilling, and AMCs across Hyderabad.
+              The Anti-Termite Reticulation System (RTR/DRS) is a long-term, maintainable,
+              and rechargeable solution that creates a uniform chemical barrier around your building’s foundation.
+              Future recharging is done through dedicated ports, eliminating the need for repeated drilling or disruptive treatments.
+              Titan Pest Control’s certified technicians manage the complete process—including system design,
+              installation, refilling, and annual maintenance—providing reliable termite protection across Hyderabad.
             </p>
 
             <h3 class="mt-40 mb-4">How the System Works</h3>
@@ -272,12 +270,6 @@
               <li><strong>Scheduled refilling (AMC):</strong> Typically every 3–5 years with inspections.</li>
             </ol>
 
-            <h3 class="mt-40 mb-4">Pricing & Warranty</h3>
-            <p>
-              <strong>Installation</strong> is based on perimeter length and layout complexity; <strong>refilling</strong> depends on the required volume.
-              After a free site assessment, you’ll receive a <em>transparent, itemized quote</em>. Our AMCs include reminders, inspections, and scheduled refills.
-            </p>
-
             <div class="mt-4 d-flex flex-wrap gap-2">
               <a class="th-btn rounded-12 style3" href="https://titanpestcontrol.com/contact">
                 Get Free Site Assessment <i class="fas fa-arrow-right ms-2"></i>
@@ -287,7 +279,7 @@
               </a>
             </div>
 
-            <h3 class="mt-40 mb-4">FAQs</h3>
+            <h3 class="mt-40 mb-4">Frequently Asked Questions – Anti-Termite Reticulation System</h3>
             <div class="accordion mt-40" id="faqAccordion">
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-1">
@@ -297,7 +289,9 @@
                 </div>
                 <div id="faqCollapse-1" class="accordion-collapse collapse show" aria-labelledby="faq-item-1" data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
-                    An underground pipe network that allows uniform termiticide injection and future refilling through ports—creating a long-lasting soil barrier against termites.
+                    It is a network of concealed pipes installed 
+                    around the foundation that delivers termite control chemicals evenly beneath the structure,
+                    creating a long-lasting protective barrier against termites.
                   </div>
                 </div>
               </div>
@@ -305,12 +299,13 @@
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-2">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-2" aria-expanded="false" aria-controls="faqCollapse-2">
-                    How long does it last and how often should it be refilled?
+                    Is the reticulation system suitable for new constructions?
                   </button>
                 </div>
                 <div id="faqCollapse-2" class="accordion-collapse collapse" aria-labelledby="faq-item-2" data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
-                    With proper installation and maintenance, systems protect for 10+ years. Refilling is typically needed every 3–5 years depending on soil and chemical.
+                    Yes. Anti-termite reticulation is ideal for new constructions and renovation projects, 
+                    as it is installed before flooring, ensuring maximum protection with minimal disruption.
                   </div>
                 </div>
               </div>
@@ -318,12 +313,13 @@
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-3">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-3" aria-expanded="false" aria-controls="faqCollapse-3">
-                    Is it safe?
+                    How long does the protection last?
                   </button>
                 </div>
                 <div id="faqCollapse-3" class="accordion-collapse collapse" aria-labelledby="faq-item-3" data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
-                    Yes. We use approved subterranean termiticides, and the chemical barrier remains outside the living space in the soil.
+                    The system provides long-term termite protection and can be easily recharged through built-in ports,
+                    extending its effectiveness for many years without drilling or damage.
                   </div>
                 </div>
               </div>
@@ -449,8 +445,6 @@
                 <li><a href="mosquito-control-services.html">Mosquito Control</a></li>
                 <li><a href="bedbug-control-services.html">Bed Bug Control</a></li>
                 <li><a href="termite-control-services-hyderabad.html">Termite Control</a></li>
-                <li><a href="bird-control.html">Bird Control</a></li>
-                <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation</a></li>
               </ul>
             </div>
@@ -530,6 +524,7 @@
 
 </body>
 </html>
+
 
 
 
