--- a/pest-control-service-balanagar.html
+++ b/pest-control-service-balanagar.html
@@ -31,7 +31,7 @@
   <!-- Hreflang -->
   
   <!-- Favicons -->
-  <link rel="icon" type="image/png" href="assets/img/favicons/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/webp" href="assets/img/titan-pest-control-logo.webp" sizes="96x96">
   <link rel="icon" type="image/svg+xml" href="assets/img/favicons/favicon.svg">
   <link rel="shortcut icon" href="assets/img/favicons/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
@@ -78,7 +78,7 @@
   <div class="th-menu-area text-center">
     <button class="th-menu-toggle" aria-label="Close Menu"><i class="fal fa-times"></i></button>
     <div class="mobile-logo">
-      <a href="index.htm"><img src="assets/img/skuas-pest-control-logo.png" alt="Skuas Pest Control Logo" loading="lazy"></a>
+      <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo" loading="lazy"></a>
     </div>
     <nav class="th-mobile-menu" aria-label="Mobile Navigation">
       <!-- (same nav as you shared) -->
@@ -140,13 +140,13 @@
         <div class="row align-items-start justify-content-between">
           <div class="col-auto d-none d-lg-block">
             <div class="header-logo">
-              <a href="index.htm"><img src="assets/img/skuas-pest-control-logo.png" style="height: 4rem; filter: brightness(0) invert(1);" alt="Skuas Pest Control Logo" loading="lazy"></a>
+              <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" style="height: 4rem; alt="Titan Pest Control Logo" loading="lazy"></a>
             </div>
           </div>
           <div class="col">
             <div class="menu-wrap">
               <div class="header-logo d-block d-lg-none">
-                <a href="index.htm"><img src="assets/img/skuas-pest-control-logo.png" alt="Skuas Pest Control" loading="lazy"></a>
+                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control" loading="lazy"></a>
               </div>
               <nav class="main-menu d-none d-lg-inline-block" role="navigation" aria-label="Primary Navigation">
                 <!-- desktop nav exactly same as yours -->
@@ -342,7 +342,7 @@
             <div class="overlay" style="position:absolute;inset:0;background:rgba(0,0,0,.5);z-index:1;border-radius:14px;"></div>
             <div class="widget-banner" style="position:relative;z-index:2;">
               <h3 class="box-title style2">Need Pest Control in Green Park?</h3>
-              <div class="logo style2"><img src="assets/img/skuas-pest-control-logo.png" alt="SKUAS Pest Control Logo"></div>
+              <div class="logo style2"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo"></div>
               <p class="box-text style2">Safe & Effective Treatments</p>
               <h3 class="box-link"><a href="tel:+919316666656">+91 93166 66656</a></h3>
               <a href="/contact" class="th-btn style2">Get a Quote <i class="far fa-arrow-right ms-2"></i></a>
@@ -395,10 +395,10 @@
           <div class="widget footer-widget">
             <div class="th-widget-about">
               <div class="about-logo">
-                <a href="index.htm"><img src="assets/img/skuas-pest-control-logo.png" alt="Skuas Pest Control Logo Footer" style="height: 4rem; filter: brightness(0) invert(1);"></a>
+                <a href="index.htm"><img src="assets/img/titan-pest-control-logo.webp" alt="Titan Pest Control Logo Footer" style="height: 4rem; filter: brightness(0) invert(1);"></a>
               </div>
               <p class="about-text">
-                Skuas Pest Control leads in eco-friendly pest solutions, safeguarding homes and businesses across India with expert care.
+                Titan Pest Control leads in eco-friendly pest solutions, safeguarding homes and businesses across India with expert care.
               </p>
               <div class="th-social">
                 <a href="https://www.facebook.com/skuaspest" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -468,7 +468,7 @@
               </div>
 
               <div class="footer-map mt-3">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.328899338242!2d77.26850237517688!3d28.559884787376657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e9c29045e64a55%3A0x2b4dc9d5d54602da!2sSkuas%20Pest%20Control!5e0!3m2!1sen!2sin!4v1741585566098!5m2!1sen!2sin" width="100%" height="150" style="border:0; border-radius: 5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Skuas Pest Control Location Map"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.328899338242!2d77.26850237517688!3d28.559884787376657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e9c29045e64a55%3A0x2b4dc9d5d54602da!2sSkuas%20Pest%20Control!5e0!3m2!1sen!2sin!4v1741585566098!5m2!1sen!2sin" width="100%" height="150" style="border:0; border-radius: 5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Titan Pest Control Location Map"></iframe>
               </div>
             </div>
           </div>
@@ -484,7 +484,7 @@
         <div class="col-md-6">
           <p class="copyright-text">
             Copyright <i class="fal fa-copyright"></i> 2025
-            <a href="index.htm">Skuas Pest Control</a>. All Rights Reserved.
+            <a href="index.htm">Titan Pest Control</a>. All Rights Reserved.
           </p>
         </div>
         <div class="col-md-6 text-center text-md-end">
@@ -522,5 +522,6 @@
 
 </body>
 </html>
+
 
 
