--- a/pest-control-service-balanagar.html
+++ b/pest-control-service-balanagar.html
@@ -218,7 +218,7 @@
 <div class="breadcumb-wrapper" data-bg-src="assets/img/bg/breadcumb-bg.jpg">
   <div class="container">
     <div class="breadcumb-content">
-      <h1 class="breadcumb-title">Pest Control Services in Green Park, Delhi</h1>
+      <h1 class="breadcumb-title">Pest Control Services in Balanagar, Hyderabad</h1>
       <ul class="breadcumb-menu">
         <li><a href="index.htm">Home</a></li>
         <li>Pest Control – Green Park</li>
@@ -241,36 +241,36 @@
           </div>
 
           <div class="page-content">
-            <h2 class="h3 sec-title page-title">Expert Pest Control for Green Park Homes & Businesses</h2>
+            <h2 class="h3 sec-title page-title">Expert Pest Control in Balanagar for Homes & Businesses</h2>
             <p>
-              <strong>Green Park</strong> in South Delhi is well known for its lively markets, high-end restaurants, and residential colonies. 
-              While the area thrives with activity, residents and businesses often face recurring issues with cockroaches, termites, rodents, and mosquitoes.  
-              At <a href="index.htm">SKUAS Pest Control</a>, we provide <strong>professional pest management services</strong> tailored to Green Park’s residential apartments, offices, and food establishments.
+               <strong>Balanagar in Hyderabad</strong> is a busy locality known for its industrial hubs, residential colonies, and commercial establishments. With constant 
+               activity and dense development, homes and businesses in the area often face recurring pest problems such as cockroaches, termites, rodents, and mosquitoes. Titan Pest Control offers professional pest management solutions 
+               specifically tailored for Balanagar’s residences, offices, shops, warehouses, and food establishments, ensuring safe, effective, and long-lasting protection.
             </p>
 
-            <h3 class="mt-40 mb-4">Why Choose SKUAS in Green Park?</h3>
+            <h3 class="mt-40 mb-4">Why Choose Our Pest Control Services in Balanagar?</h3>
             <ul>
-              <li><strong>Local Expertise:</strong> Familiar with the pest challenges in Green Park’s homes and restaurants.</li>
+              <li><strong>Local Expertise:</strong> Local expertise in managing pest problems common to Balanagar’s homes and eateries.</li>
               <li><strong>FSSAI Compliant:</strong> Safe and approved treatments for restaurants, cafes, and hotels.</li>
               <li><strong>Eco-Friendly:</strong> Low-odor, government-approved products safe for children and pets.</li>
               <li><strong>Quick Response:</strong> Same-day inspection and treatment for urgent infestations.</li>
-              <li><strong>Affordable Pricing:</strong> Transparent packages starting from ₹999 with guaranteed results.</li>
             </ul>
 
-            <h3 class="mt-40 mb-4">Our Pest Control Services in Green Park</h3>
+            <h3 class="mt-40 mb-4">Our Pest Control Services in Balanagar</h3>
             <ol>
-              <li><a href="cockroach-control-services.html">Cockroach Control</a> – Kitchens & restaurants in Green Park are particularly vulnerable; we use gel and spray treatments.</li>
-              <li><a href="termite-control-services-delhi.html">Termite Treatment</a> – Advanced soil and wood preservation methods for homes and offices.</li>
+              <li><a href="cockroach-control-services.html">Cockroach Control</a> – Kitchens and restaurants in Balanagar are especially vulnerable, so we use targeted gel and spray treatments for effective control.</li>
+              <li><a href="termite-control-services-delhi.html">Termite Treatment</a> – Effective soil and wood protection methods for long-term termite prevention</li>
               <li><a href="rodent-control-services.html">Rodent Control</a> – Effective solutions for restaurants, shops, and houses.</li>
-              <li><a href="bedbug-control-services.html">Bed Bug Control</a> – Discreet treatments for PGs, hostels, and apartments in Green Park.</li>
+              <li><a href="bedbug-control-services.html">Bed Bug Control</a> – Discreet pest control treatments for PGs, hostels, and apartments in Balanagar</li>
               <li><a href="mosquito-control-services.html">Mosquito Control</a> – Fogging and larvicidal treatments for outdoor and indoor areas.</li>
-              <li><a href="disinfection-services.html">Disinfection Services</a> – Hygienic sanitization for homes, clinics, and restaurants.</li>
             </ol>
 
-            <h3 class="mt-40 mb-4">Service Coverage in Green Park</h3>
+            <h3 class="mt-40 mb-4">Service Coverage in Balanagar</h3>
             <p>
-              SKUAS covers the entire Green Park area including residential flats, luxury homes, and the bustling Green Park Market.  
-              We also extend services to neighboring Hauz Khas, Safdarjung, and Yusuf Sarai, ensuring residents and businesses enjoy a <strong>pest-free, healthy environment</strong>.
+              <strong>Titan Pest Control</strong> covers the entire <strong>Balanagar area</strong>, 
+              including residential apartments, independent homes, commercial spaces, and busy market zones. 
+              We also extend our pest control services to nearby localities such as <strong>Moosapet, Kukatpally, Sanathnagar, and Jeedimetla</strong>, 
+              ensuring homes and businesses enjoy a <strong>safe, hygienic, and pest-free environment</strong>.
             </p>
 
             <h3 class="mt-40 mb-4">FAQs – Pest Control in Green Park</h3>
@@ -278,36 +278,39 @@
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-1">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-1" aria-expanded="true" aria-controls="faqCollapse-1">
-                    Do you provide pest control services for restaurants in Green Park?
+                    What pest control services do you offer in Balanagar?
                   </button>
                 </div>
                 <div id="faqCollapse-1" class="accordion-collapse collapse show" aria-labelledby="faq-item-1" data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
-                    Yes, we specialize in restaurant pest control in Green Park with FSSAI-compliant treatments safe for kitchens and dining areas.
+                    Titan Pest Control provides complete pest management services in Balanagar, including cockroach, rodent, mosquito, bed bug, termite control,
+                    and anti-termite reticulation for homes and businesses.
                   </div>
                 </div>
               </div>
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-2">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-2" aria-expanded="false" aria-controls="faqCollapse-2">
-                    Do you offer termite treatment for houses in Green Park?
+                    Are your pest control treatments safe for families and pets in Balanagar homes?
                   </button>
                 </div>
                 <div id="faqCollapse-2" class="accordion-collapse collapse" aria-labelledby="faq-item-2" data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
-                    Yes, we provide comprehensive termite treatment for Green Park homes and commercial spaces using soil and wood preservation methods.
+                    Yes. We use government-approved, eco-friendly pest control solutions that are safe for children and 
+                    pets when applied by our trained technicians, with proper safety guidelines.
                   </div>
                 </div>
               </div>
               <div class="accordion-card">
                 <div class="accordion-header" id="faq-item-3">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse-3" aria-expanded="false" aria-controls="faqCollapse-3">
-                    Are your treatments safe for families with children and pets?
+                    Do you provide pest control for commercial properties in Balanagar?
                   </button>
                 </div>
                 <div id="faqCollapse-3" class="accordion-collapse collapse" aria-labelledby="faq-item-3" data-bs-parent="#faqAccordion">
                   <div class="accordion-body">
-                    Yes, we use eco-friendly, low-odor products that are safe when applied by our trained technicians.
+                   Absolutely. We offer specialized pest control services for restaurants, shops, offices,
+                    warehouses, PGs, hostels, and apartments across Balanagar, following hygiene and safety standards.
                   </div>
                 </div>
               </div>
@@ -522,6 +525,7 @@
 
 </body>
 </html>
+
 
 
 
